@@ -1,3 +1,9 @@
+2002-12-16  David N. Welton  <davidw@dedasys.com>
+
+	* irc.tcl: Use 'logger' package for error/debug reporting.
+	Cleanups with regards to possible 'bgerror' situations (network
+	input/output).  Bumped version number to 0.3.
+
 2002-04-10  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* irc.man: Added doctools manpage.
